--- a/style.css
+++ b/style.css
@@ -1086,7 +1086,7 @@ body.landing #header img{
 /* Banner */
     
 	#banner {
-		background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(https://dimitrisd1997.github.io/KingHenryBurial.jpg);
+		background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(dimitrisd1997.github.io/KingHenryBurial.jpg);
 		background-position:center center;
         background-attachment: fixed;
 		background-size: cover;
@@ -1125,7 +1125,7 @@ body.landing #header img{
 			border-top: 1px solid rgba(144, 144, 144, 0.25);
 		}
        	.wrapper.style4 {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(https://dimitrisd1997.github.ioGJJP3X-1.jpg);
+            background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(dimitrisd1997.github.ioGJJP3X-1.jpg);
 	     	background-position:center center;
             background-attachment: fixed;
 		    background-size: cover;
