--- a/style.css
+++ b/style.css
@@ -1086,7 +1086,7 @@ body.landing #header img{
 /* Banner */
     
 	#banner {
-		background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../images/KingHenryBurial.jpg);
+		background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url("https://dimitrisd1997.github.io/KingHenryBurial."}pg);
 		background-position:center center;
         background-attachment: fixed;
 		background-size: cover;
@@ -1125,7 +1125,7 @@ body.landing #header img{
 			border-top: 1px solid rgba(144, 144, 144, 0.25);
 		}
        	.wrapper.style4 {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../images/GJJP3X-1.jpg);
+            background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url("https://dimitrisd1997.github.io/GJJP3X-1.jpg");
 	     	background-position:center center;
             background-attachment: fixed;
 		    background-size: cover;
@@ -1161,7 +1161,7 @@ body.landing #header img{
 		}
 
 			.wrapper.style2 .profile img {
-				border-radius: 20%;
+				border-radius: 50%;
 				float: left;
 				margin-bottom: 1em;
 				margin-right: 1em;
