--- a/style.css
+++ b/style.css
@@ -1086,7 +1086,7 @@ body.landing #header img{
 /* Banner */
     
 	#banner {
-		background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url("https://dimitrisd1997.github.io/KingHenryBurial."}pg);
+		background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url("https://dimitrisd1997.github.io/KingHenryBurial.")pg);
 		background-position:center center;
         background-attachment: fixed;
 		background-size: cover;
